# CUDA_Mandelbrot_set

./: CMakeLists.txt  Dockerfile  run.sh
src/: cudamandelbrot.cu  cudamandelbrot.h  main.cpp  main.cu  params.h
